--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
+    "@react-native-community/cli": "^18.0.0",
     "@tailwindcss/typography": "^0.5.15",
     "@types/node": "^22.15.32",
     "@types/react": "^18.3.23",
