--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,10 @@
-# Federated Learning Configuration
-VITE_FEDERATED_SERVER_URL=https://your-federated-server.example.com
-VITE_FEDERATED_MODEL_NAME=health-monitoring-model
+# Supabase Configuration
+VITE_SUPABASE_URL=your_supabase_url_here
+VITE_SUPABASE_ANON_KEY=your_supabase_anon_key_here
+
+# Application Configuration
+VITE_APP_NAME=HealthPulse Captain
+VITE_APP_VERSION=1.0.0
+
+# Security Configuration
+VITE_ENABLE_LOGGING=false
